--- a/src/styles/pages/Question.module.css
+++ b/src/styles/pages/Question.module.css
@@ -91,3 +91,75 @@
 .finish>button:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 600px) {
+    .header {
+        padding: 0 2rem;
+        flex-direction: column;
+    }
+
+    .header>.question {
+        padding: 1rem;
+    }
+
+    .header>.questionNumber {
+        padding: 1rem;
+    }
+
+    .header>.questionNumber>div {
+        font-size: 1.2rem;
+        width: 40px;
+        height: 40px;
+    }
+
+    .header>.question>h3 {
+        font-size: 1.2em;   
+        text-align: center;
+    }
+
+    .header>.question>h6 {
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+        text-align: center;
+    }
+
+    .main {
+        padding: 0;
+    }
+
+    .main>section {
+        padding: 0 1rem;
+        margin: 0 auto;
+    }
+
+    .main>section>button {
+        margin: 0;
+        margin-top: .5rem;
+        font-size: 1rem;
+    }
+
+    .main>div {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main>div>label {
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .main>div>label>input {
+        width: 10%;
+    }
+
+    .main>div>button {
+        margin: 1rem 2rem;
+    }
+
+    .finish {
+        padding: 0 2rem;
+
+        text-align: center;
+        /* margin-top: 3rem; */
+    }
+}
